--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1>Tetris</h1>
     <div id="score">Score: 0</div>
-    <div class="controls">
-        <button id="restartButton">Reiniciar Jogo</button>
-        <button id="pauseButton">Pausar Jogo</button>
+    <div class="touch-controls">
+        <button id="leftButton" class="touch-button"></button>
+        <button id="rotateButton" class="touch-button"></button>
+        <button id="rightButton" class="touch-button"></button>
+        <button id="downButton" class="touch-button"></button>
     </div>
     <canvas id="tetrisCanvas" width="250" height="500"></canvas>
 
