--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <div class="game-wrapper">
-        <div class="main-game-area">
-            <div class="pc-controls left">
-                <button id="restartButton"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/></svg></button>
-            </div>
-            <div>
-                <h1>Tetris</h1>
-                <div id="score">Score: 0</div>
-                <canvas id="tetrisCanvas" width="250" height="500"></canvas>
-            </div>
-            <div class="pc-controls right">
-                <button id="pauseButton"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg></button>
+        <div class="game-content-wrapper">
+            <div class="main-game-area">
+                <div class="pc-controls left">
+                    <button id="restartButton"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/></svg></button>
+                </div>
+                <div>
+                    <h1>Tetris</h1>
+                    <div id="score">Score: 0</div>
+                    <canvas id="tetrisCanvas" width="250" height="500"></canvas>
+                </div>
+                <div class="pc-controls right">
+                    <button id="pauseButton"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg></button>
+                </div>
             </div>
         </div>
         <div class="touch-controls">
